--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~12.1.1",
     "@angular/router": "~12.1.1",
     "@fortawesome/angular-fontawesome": "^0.9.0",
+    "@fortawesome/fontawesome-free": "^5.15.3",
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
@@ -29,6 +30,9 @@
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
+  "styles": [
+    "../node_modules/@fortawesome/fontawesome-free/css/font-awesome.css" 
+  ],
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.1.1",
     "@angular/cli": "~12.1.1",
